# algorithm

./: .gitignore  Dynamic Programming.py  pyproject.toml  test.ipynb  야구게임.py
leetcode/: 1.ipynb  2.ipynb  3.ipynb
programmers/: 12341234.ipynb  Untitled-1.ipynb  autowrittingvelog.py  autowrittingvelog1.py  autowrittingvelog2.py  public_change.py
programmers/files/: 181932.py  level0-181928.py  level0-181929.py  level0-181931.py  level0-181936.py  level0-340203.py  level0-340206.py  level1-161990.py  level1-172928.py  level1-178871.py  level1-340213.py  level1-388351.py  level1-389478.py  tempCodeRunnerFile.py
programmers/level0/: 181927.py  181930.py  181933.py  181934.py  181935.py  181937.py  340205.py
programmers/level1/: 161989.py  178871.py  340213.py  388351.py  389478.py
programmers/ui/: auto_upload.ui
uploads/: level1-161990.py
