[project]
name = "algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "ipykernel>=6.29.5",
    "markdownify>=1.1.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "selenium-stealth>=1.0.6",
    "seleniumbase>=4.39.2",
    "webdriver-manager>=4.0.2",
]
